[package]
name = "quic_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = {workspace = true}
quinn = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
rcgen = "0.13.2"
rustls = {workspace = true}
anyhow = "1.0.98"
